-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 11, 15, 16
-
Component/s: client-libs
-
b08
-
generic
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8271404 | 15.0.5 | Yuri Nesterenko | P3 | Resolved | Fixed | b01 |
| JDK-8257246 | 11.0.11-oracle | Pankaj Bansal | P3 | Resolved | Fixed | b01 |
| JDK-8257655 | 11.0.11 | Matthias Baesken | P3 | Resolved | Fixed | b01 |
| JDK-8257980 | openjdk8u292 | Matthias Baesken | P3 | Resolved | Fixed | b01 |
| JDK-8257395 | 8u291 | Pankaj Bansal | P3 | Resolved | Fixed | b01 |
| JDK-8262614 | emb-8u291 | Pankaj Bansal | P3 | Resolved | Fixed | team |
Looks like in the libwindowsaccessbridge native coding,
BOOL CALLBACK AccessBridgeDialogProc(HWND hDlg, UINT message,
UINT wParam, LONG lParam);
is used as a DLGPROC in the coding :
theDialogWindow = CreateDialog(windowsInstance,
"ACCESSBRIDGESTATUSWINDOW", NULL,
(DLGPROC) AccessBridgeDialogProc);
so according to
https://docs.microsoft.com/en-us/windows/win32/api/winuser/nc-winuser-dlgproc the 3rd and 4th parameter should be … WPARAM wParam, LPARAM lParam (this would make a difference on 64bit Windows).
BOOL CALLBACK AccessBridgeDialogProc(HWND hDlg, UINT message,
UINT wParam, LONG lParam);
is used as a DLGPROC in the coding :
theDialogWindow = CreateDialog(windowsInstance,
"ACCESSBRIDGESTATUSWINDOW", NULL,
(DLGPROC) AccessBridgeDialogProc);
so according to
https://docs.microsoft.com/en-us/windows/win32/api/winuser/nc-winuser-dlgproc the 3rd and 4th parameter should be … WPARAM wParam, LPARAM lParam (this would make a difference on 64bit Windows).
- backported by
-
JDK-8257246 libwindowsaccessbridge issues on 64bit Windows
-
- Resolved
-
-
JDK-8257395 libwindowsaccessbridge issues on 64bit Windows
-
- Resolved
-
-
JDK-8257655 libwindowsaccessbridge issues on 64bit Windows
-
- Resolved
-
-
JDK-8257980 libwindowsaccessbridge issues on 64bit Windows
-
- Resolved
-
-
JDK-8262614 libwindowsaccessbridge issues on 64bit Windows
-
- Resolved
-
-
JDK-8271404 libwindowsaccessbridge issues on 64bit Windows
-
- Resolved
-
- relates to
-
JDK-8256596 The jaccessinspector crashes with jdk10 and jdk8
-
- Closed
-
(1 backported by, 1 relates to, 3 links to)