8249588: libwindowsaccessbridge issues on 64bit Windows

Reviewed-by: arapte, prr